--- a/templates/editor.html
+++ b/templates/editor.html
@@ -76,6 +76,7 @@
   <div class="file-upload">
     <input type="file"  id="sig-file1" accept="png/JPG/jpeg" />
     <button id="sigi" type="button" class="button1"> Test Bild hochladen</button>
+    </div>
        style="display:none;max-width:160px;margin-top:8px;border:1px solid var(--border);border-radius:6px;">
   <p class="muted">Tipp: PNG/JPG/WebP. HEIC/HEIF bitte vorher konvertieren.</p>
   </div>
